# fsfp

./: Cargo.toml  README.md
examples/: main.rs
src/: add_sub.rs  fp_impl.rs  lib.rs  mul_div.rs
tests/: add_sub.rs  from_into.rs  min_max.rs  mul_div.rs
